# vlm-toolbox

./: .gitignore  .gitignore copy  LICENSE  README copy.md  README.md  environment.yaml  pyproject.toml  requirements.txt
io/annotations/cifar100/: labels.csv
io/annotations/food101/: labels.csv
notebooks/analytics/: accuracy.ipynb  embedding_distribution.ipynb  multi_granular_performance.ipynb  winner.ipynb
notebooks/evaluate/: compare.ipynb  hierarchy_coop.ipynb  zero_shot.ipynb
notebooks/fine_tune/: clip.ipynb  coop.ipynb  coop_experiments.ipynb  manual_tuning.ipynb
output/setups/: setup_1.pkl  setup_2.pkl  setup_3.pkl  setup_4.pkl  setup_5.pkl  setup_6.pkl
vlm_toolbox/config/: annotations.py  backbones.py  base.py  enums.py  general_setting.py  image_datasets.py  logging.py  loss.py  memory.py  metric.py  modality.py  model.py  path.py  precision.py  sampler.py  setup.py  soft_prompting.py  train.py  transforms.py  validator.py
vlm_toolbox/loss/: coarsely_supervised.py  contrastive_loss.py  elm_loss.py  factory.py  l1_loss.py  l2_loss.py  label_smoothing_loss.py  margin_metric_softmax.py
vlm_toolbox/metric/: base.py  classification.py
vlm_toolbox/model/: data_classes.py  vlm.py  vlm_factory.py  vlm_wrappers.py
vlm_toolbox/optim/: optimizers.py
vlm_toolbox/pipeline/: pipeline.py
vlm_toolbox/scripts/: train.py
vlm_toolbox/util/: color.py  distance.py  jupyter.py  memory.py  networkx_helper.py  numpy_helper.py  object.py  pandas_helper.py  path.py  precision.py  tensorboard.py  torch_helper.py  transform.py  wordnet_handler.py
(+47 files in other folders)
